test/bluejay/ill-typed/continuation_bind2.caprice
(* TEST
  include refutable;
*)

(* Continuation monad -- improper definition of bind *)
(* Has same well-typed version as continuation_bind1 *)

let t : type -> type -> type = fun a r -> { continuation : (a -> r) -> r }

let bind (type a' b' r') (ar_r : t a' r') : (a' -> t b' r') -> t r' b' = (* ERROR: should be `t b' r'` return type *)
  fun a_br_r ->
    { continuation = 
      fun br -> ar_r.continuation (fun a -> (a_br_r a).continuation br)
    }

let r = { r : int }

let x =
  { continuation =
    fun ir ->
      { r = (ir 0).r + 1 } }

let f =
  fun i ->
    { continuation =
      fun lir ->
        lir [ i ]
    }

let y = bind int (list int) r x f

let z = y.continuation (fun ls ->
  match ls with
  | [] -> { r = 0 }
  | hd :: _ -> { r = hd }
  end
)
